--- a/save_plot.ipynb
+++ b/save_plot.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_l_to_p(requests, time_per_request):\n",
+    "def compute_latency_to_parallelism(requests, time_per_request):\n",
     "    df = pd.DataFrame(columns=['P', 'L'])\n",
     "    for i in range(1, int(requests * 1.5) + 1 ):\n",
     "        df = df.append([{'P': i, 'L': (1 + 0.5 * (requests / i)) * time_per_request}])\n",
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = compute_l_to_p(10, 0.2)"
+    "df = compute_latency_to_parallelism(10, 0.2)"
    ]
   },
   {
